--- a/paper/main.tex
+++ b/paper/main.tex
@@ -355,10 +355,9 @@ The energy equations for fluid and solid phases are given in equations \ref{eq:p
 In the energy equations, $\rho c_p$ is the volumetric heat capacity in $Jm^3K^{-1}$, $T_f$ and $T_s$ are respectively the fluid temperature and the solid temperature in K, $k_f$ is the fluid thermal conductivity in $Wm^{-1}K^{-1}$, a is the specific surface area in $m^{-1}$, q is the heat generation in $Wm^{-3}$.
 
 In a typical nuclear reactor, 97\% of the energy is deposited in the fuel while the rest is transported in coolant, reflectors and even shield by long range particles such as neutrons and gammas. 
-In the current model, nuclear power is assumed generated inside the solid medium of the fuel region and transferred to the coolant through heat convection. Conservative adiabatic boundary condition is applied at the reflector walls. Reflectors have separate coolant channels to maintain the temperature and temperature in outer layers such as graphite reflectors and stainless steel containment has negligible effect on neutronics behaviour, therefore their temperatures are not computed in the coupled simulation. However, it can be computed using the coupled simulation results as boundary conditions.
+In the current model, nuclear power is assumed generated inside the solid medium of the fuel region and transferred to the coolant through heat convection. Reflectors have separate coolant channels to maintain the temperature and temperature in outer layers such as graphite reflectors and stainless steel containment has negligible effect on neutronics behaviour, therefore conservative adiabatic boundary condition is applied at the reflector walls and the temperatures of the outer layers are not computed in the coupled simulation. However, they can be computed using the coupled simulation results as boundary conditions.
 
 In a porous media model, the convective heat transfer between the fuel pebbles and the coolant is computed from empirical correlations, whose validation affects directly the credibility of the results. The Wakao correlation (equation \ref{eq:wakao}) \cite{Wakao1979} calculates the convective heat transfer coefficient between pebbles and coolant, with Pr and Re the Prandtl and Reynolds numbers.
-The constants in the correlation are obtained from a collection of heat transfer data that are carefully examined and corrected for the axial fluid thermal dispersion coefficients. Even though the experimental data that the correlation used to compute the coefficients do not expand the entire FHR flow conditions, recent experimental measurements in randomly packed pebble bed \cite{Huddar2016} have concluded that the Wakao correlation predicts the heat transfer in the FHR conditions adequately.
 
 \begin{equation}
   Nu = 2 + 1.1 Pr^{1/3}Re^{0.6} 
@@ -374,12 +373,11 @@ The convective heat transfer coefficient can be obtained from the Nussult number
 
 
 Inlet coolant temperature are imposed at the inlet boundary.  This enables modeling of overcooling transient by setting the inlet coolant temperature as a time dependent function. Either flow rate or detailed velocity profile perpendicular to the inlet surface can be imposed as flow straighteners are designed to make sure that the inlet flow is fully developed and the coolant injection channels are designed for prescribed inlet flow conditions.
-
 Zero pressure is set to the outlet surfaces. Slip conditions neglect viscous effects are applied to the walls that contain the fluid.  
 
 \subsubsection{Multi-scale temperature distribution}
 
-In order to determine the temperature distribution inside fuel pebbles and TRISO particles, which are crucial for accurately determining temperature feedback effect from the fuel material during fast transient analysis, we use the 1-D heat diffusion equation in spherical coordinate to model the heat conduction inside solid fuel elements:
+In order to determine the temperature distribution inside fuel pebbles and TRISO particles, which is crucial for accurately determining the temperature reactivity feedback from the fuel material during transient scenarios, we use the 1-D heat diffusion equation in spherical coordinate to model the heat conduction inside solid fuel elements:
 
 \begin{align}
   \rho C_p\frac{\partial T}{\partial t} = \frac{1}{r^2}\frac{\partial}{\partial r}\left(kr^2\frac{\partial T}{\partial r}\right) + g
@@ -398,10 +396,8 @@ U_0 = 0\\
 \frac{\partial U}{\partial r} |_{r=R} = \left( \frac{1}{R} - \frac{h}{k}\right) U + \frac{R}{k}hT_{\infty}
 \end{align}
 
-This equation system is readily solved numerically under finite volume discretization, where spherical elements are divided into fine annuli, so that the temperature in each can be considered uniform. 
-
-
-Likewise, the coated particle is divided into n layers. In order to save computational cost, the coatings are combined into a non-heat-generating layer with equivalent heat transfer properties. The heat transfer equation for the jth layer in a TRISO particle that is situated in the ith layer of a fuel pebble is shown in equation \ref{eq:ij_diffusion}.
+This equation system is readily solved numerically under finite volume discretization, where spherical elements, such as both fuel pebbles and TRISO particles, are divided into fine annuli, so that the temperature in each can be considered uniform. 
+The resulting heat transfer equation for the jth layer in a TRISO particle that is situated in the ith layer of a fuel pebble is shown in equation \ref{eq:ij_diffusion}.
 
 \begin{equation}
     \frac{\partial{Tp_{i,j}}}{\partial{t}}\rho_{i,j}c_{p_{i,j}} = \frac{k_{i,j}}{r_{i,j}}   \Bigg[  \frac {\frac{r_{i,j+1}T_{i,j+1}}{r_{i,j+1}-r_{i,j}}+\frac{r_{i,j-1}T_{i, j-1}}{r_{i,j}-r_ {i, j-1}  }}{\frac{1}{2}(r_ {i, j+1} -r_ {i, j-1} )}-\frac{2r_ {i, j} T_ {i,j} }{(r_ {i,j} -r_ {i,j-1} )(r_ {i, j+1} -r_ {i,j})} \Bigg]  + g  
@@ -414,13 +410,13 @@ where r is the radius of TRISO particles.
 
 
 
-\subsection{Implementation of the model}
+\subsection{Implementation of the model and solver sequence}
 \label{sec:implementation}
 
-The model is implemented in the COMSOL Multiphysics, a software package that solves systems of PDEs or ODEs using the Finite Element Method (FEM), by finding a solution composed of the sum of the product of shape functions and associated coefficients. 
+The model is implemented in COMSOL Multiphysics, a software package that solves systems of partial differential equations (PDEs) or ordinary differential equations (ODEs) using the Finite Element Method (FEM), by finding a solution composed of the sum of the product of shape functions and associated coefficients. 
 
-Once the equation system is assembled, the solvers start by searching for the eigenvalue in neutronics equations (equation \ref{eq:diffusion}) with cross-sections computed from an initial guess of uniform temperatures. 
-With the flux distribution found by the eigenvalue solver, a stationary solver computes the temperature distribution in the core by solving the conservation equations in thermal-hydraulics modules. However, an eigenvalue solver evaluate the fluxes and power density values (equation \ref{eq:powerdensity}) on an arbitrary scale, so the power density is normalized onto the operation power in steady state solver , as shown in equation \ref{eq:scale}.  
+After defining the geometry, input parameters and physics, the equation system is assembled and the solver sequence starts by searching for the eigenvalue in the neutronic equations (equation \ref{eq:diffusion}) with cross-sections computed from an initial guess of the temperatures. 
+With the flux distribution found by the eigenvalue solver, a stationary solver computes the temperature distribution in the core by solving the conservation equations in thermal-hydraulics modules. However, an eigenvalue solver evaluate the fluxes and power density values (equation \ref{eq:powerdensity}) on an arbitrary scale, so the power density is normalized onto the operation power in steady state solver, as shown in equation \ref{eq:scale}.  
 
 \begin{equation}
   \dot{P} = \sum_{g=1}^G \kappa \Sigma_{f,g} \flux _g
@@ -600,12 +596,15 @@ The model uses thermal property values in Table \ref{tab:flibe} for flibe coolan
 
 
 To model the flow field and heat transfer in the pebble bed, porous media approach computes a liquid temperature and a fuel temperature at each point in the region and connect the two phases through convective heat transfer. The fuel temperature is of prime important in FHR transient response because of the large Doppler temperature reactivity feedback. Therefore, multiscale temperature treatment is implemented for a more realistic representation of the feedback from fuel temperature changes. 
-Temperature inside fuel pebbles are computed in three subdivided fuel layers, and likewise the fuel kernel in the TRISO particles are divided into three sub-layers, for which temperatures are tracked during a transient and are used to compute fuel region macroscopic cross-sections. The effects of this treatment on the response to reactivity insertion and overcooling transients are discussed further in section \ref{sec:TMSR_transients} when we analyze the TMSR transient behaviors.
 
-
+Temperature inside fuel pebbles are computed in three subdivided fuel layers, and likewise the fuel kernel in the TRISO particles are divided into three sub-layers, for which temperatures are tracked during a transient and are used to compute fuel region macroscopic cross-sections. In order to save computational cost, the coatings are combined into a non-heat-generating layer with equivalent heat transfer properties. The effects of this treatment on the response to reactivity insertion and overcooling transients are discussed further in section \ref{sec:TMSR_transients} when we analyze the TMSR transient behaviors.
 
 A vacuum boundary condition is applied at the outer surfaces of the reflector. And a symmetry boundary condition is used at the core center-line in 2-D axi-symmetrical models.
 
+
+
+
+% ----------------------------------------------------------------------------------------------------------------------
 \subsection{Mesh refinement study}
 he TMSR core model with homogenized regions is meshed with free triangular (2D) or tetrahedral (3D) elements. The effect of mesh size on solution accuracy is studied through mesh refinement studies, where the mesh element size is decreased gradually, with the minimum mesh size ranging from 0.1 m to 0.004 m, and the solutions are compared. 
 
